# api/controllers/list.js
@@ -2,28 +2,75 @@ const listBO = require('../BO/ListBO');
 const httpStatus = require('../util/enum/httpStatus');
 const errorHandler = require('../util/errorHandler');
 
-
-const get = async (req, res) => {
-  const { user } = req.swagger.params;
+const execGET = async ({ code, user, res }) => {
   try {
-    const data = await listBO.get({ user });
+    const data = await listBO.get({ code, user });
     res.status(httpStatus.OK).json(data);
-  } catch (erro) {
-    res.status(httpStatus.SERVER_ERROR).json(errorHandler(erro));
+  } catch (error) {
+    errorHandler(error, res);
   }
 };
-const post = async (req, response) => {
-  const data = (req.swagger.params.data || {}).value;
-  const user = (req.swagger.params.user || {}).value;
-  try {
-    await listBO.create({ ...data, user });
-    response.send(httpStatus.CREATED);
-  } catch (erro) {
-    response.status(httpStatus.SERVER_ERROR).json(errorHandler(erro));
-  }
+const get = (req, res) => {
+  const { value: user } = req.swagger.params.user;
+  execGET({ user, res });
 };
 
+const getList = async (req, res) => {
+  const { user: { value: user }, code: { value: code } } = req.swagger.params;
+  execGET({ code, user, res });
+};
+const execSetData = async ({
+  data, user, operation, res,
+}) => {
+  if (!data.name) {
+    return errorHandler({
+      key: 'INVALID_PARAMETER',
+      message: 'Parameter "data.name" is invalid',
+      status: httpStatus.BAD_REQUEST,
+    }, res);
+  }
+  try {
+    await listBO[operation]({ ...data, user });
+    const status = (operation === 'create' ? 'CREATED' : 'NO_CONTENT');
+    return res.send(httpStatus[status]);
+  } catch (error) {
+    return errorHandler(error, res);
+  }
+};
+const post = async (req, res) => {
+  const {
+    user: { value: user },
+    data: { value: data },
+  } = req.swagger.params;
+  execSetData({
+    data, user, operation: 'create', res,
+  });
+};
+
+const patch = async (req, res) => {
+  const {
+    user: { value: user },
+    data: { value: data },
+    code: { value: code },
+  } = req.swagger.params;
+  execSetData({
+    data: { ...data, code }, user, operation: 'update', res,
+  });
+};
+
+const destroy = async (req, res) => {
+  const { code: { value: code } } = req.swagger.params;
+  try {
+    listBO.destroy(code);
+    return res.send(httpStatus.NO_CONTENT);
+  } catch (error) {
+    return errorHandler(error, res);
+  }
+};
 module.exports = {
   get,
   post,
+  getList,
+  patch,
+  destroy,
 };
