# api/swagger/swagger.json
@@ -62,6 +62,9 @@
             "schema": {
               "$ref": "#/definitions/List"
             }
+          },
+          {
+            "$ref": "#/parameters/user"
           }
         ],
         "responses": {
@@ -96,6 +99,9 @@
           "description": "List code",
           "type": "string",
           "format": "uuid"
+        },
+        {
+          "$ref": "#/parameters/user"
         }
       ],
       "get": {
@@ -178,7 +184,7 @@
         "tags": [
           "List"
         ],
-        "operationId": "delete",
+        "operationId": "destroy",
         "summary": "Deletes an List",
         "description": "Deletes an list header",
         "responses": {
